turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:35: error: ')' expected but integer literal found.
    right(360./7.)
               ^